# rounds-ai-takehome-challenge

./: .gitignore  PLAN.md  docker-compose.yml
appdata-analyst/: .env.sample  NOTICE  README.md  app.py  manifest.json  pyproject.toml  requirements.txt
appdata-analyst/.claude/: CLAUDE.md
appdata-analyst/.slack/: config.json
appdata-analyst/agent/: agent.py  deps.py  executor.py  job.py  response_model.py
appdata-analyst/agent/tools/: execute_sql.py
appdata-analyst/db/: connection.py
appdata-analyst/formatting/: app_links.py  composer.py  renderers.py
appdata-analyst/listeners/actions/: __init__.py  analytics_followup.py
appdata-analyst/listeners/events/: app_mentioned.py
appdata-analyst/observability/: langfuse.py
appdata-analyst/tests/: test_analytics.py
appdata-analyst/thread_context/: store.py
db/init/: 03_role.sql
todos/: add_concurency_features.md  migrate-to-langfuse-v3.md  migrate-to-podman.md  prettify_plots.md  update-slack-bot-description.md
