[project]
name = "appdata-analyst"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk==3.41.0",
    "slack-bolt>=1.28.0",
    "slack-cli-hooks<1.0.0",
    "pydantic-ai[anthropic,groq,openai]",
    "python-dotenv==1.2.2",
    "pytest>=9.0.3",
    "ruff==0.15.12",
    "psycopg[binary,pool]>=3.1",
    "sqlglot>=23.0",
    "tenacity>=8.2",
    "matplotlib>=3.8",
    "langfuse>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ruff==0.15.12",
]

[tool.setuptools.packages.find]
include = ["agent*", "listeners*", "thread_context*"]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
